# ni_vision

./: .gitignore  LICENSE  README.md  externaldependencies
ni_vision/: TestNewBranch  libmake  libmake_color  libmake_simple  ni_tool_image  ni_tool_video  ni_vision
ni_vision/scripts/: ni_vision  ni_vision.sh
ni_vision/src/gbseg_node/: CMakeLists.txt  package.xml  readme.txt
ni_vision/src/gbseg_node/msg/: params_GbSeg.msg  segment.msg  segmentation.msg
ni_vision/src/gbseg_node/src/: gb_segmentation_node.cpp  params_GbSeg_publisher.cpp  result_GbSeg_subscriber.cpp
ni_vision/src/gbseg_node/src/gbsegmentation/: segment-image.h
ni_vision/src/ni/: CMakeLists.txt  package.xml
ni_vision/src/ni/cmake/: BuildTests.cmake  DetectELM.cmake  DetectOpenCV.cmake
ni_vision/src/ni/docs/: .gitignore  doxygenConf.txt  ni.bib
ni_vision/src/ni/modules/ni/core/: base_boundingbox.cpp  base_boundingbox.h  boundingbox2d.cpp  boundingbox2d.h  boundingbox3d.cpp  boundingbox3d.h  color_utils.cpp  color_utils.h  colorhistogram.cpp  colorhistogram.h  img_utils.cpp  img_utils.h  surface.cpp  surface.h
ni_vision/src/ni/modules/ni/core/graph/: VertexOpSegmentSize.cpp  VertexOpSegmentSize.h  vertexopsegmentrect.cpp  vertexopsegmentrect.h  vertexopsegmentsize.cpp  vertexopsegmentsize.h
ni_vision/src/ni/modules/ni/core/stl/: typedefs.h
ni_vision/src/ni/modules/ni/core/test/: boundingbox2d_unittests.cpp  boundingbox3d_unittests.cpp  color_utils_unittests.cpp  colorhistogram_unittests.cpp  img_utils_unittests.cpp  surface_unittests.cpp
ni_vision/src/ni/modules/ni/core/test/graph/: VertexOpSegmentSize_unittests.cpp  vertexopsegmentrect_unittests.cpp  vertexopsegmentsize_unittests.cpp
ni_vision/src/ni/modules/ni/layers/: CMakeLists.txt  attention.cpp  attention.h  depthgradient.cpp  depthgradient.h  depthgradientrectify.cpp  depthgradientrectify.h  depthgradientsmoothing.cpp  depthgradientsmoothing.h  depthmap.cpp  depthmap.h  depthsegmentation.cpp  depthsegmentation.h  layerfactoryni.cpp  layerfactoryni.h  mapareafilter.cpp  mapareafilter.h  mapneighadjacency.cpp  mapneighadjacency.h  prunesmallsegments.cpp  prunesmallsegments.h  recognition.cpp  recognition.h  surfacetracking.cpp  surfacetracking.h
ni_vision/src/ni/modules/ni/layers/test/: depthgradient_unittests.cpp  depthgradientrectify_unittests.cpp  depthmap_unittests.cpp  depthsegmentation_unittests.cpp  mapareafilter_unittests.cpp  mapneighadjacency_unittests.cpp  prunesmallsegments_unittests.cpp  surfacetracking_unittests.cpp
ni_vision/src/ni/modules/ni/legacy/: CMakeLists.txt  func_init.cpp  func_init.h  func_operations.cpp  func_operations.h  func_operations.hpp  func_preproc.cpp  func_preproc.h  func_recognition.cpp  func_recognition.h  func_recognition_flann.cpp  func_recognition_flann.h  func_segmentation .cpp  func_segmentation.h  surfprop.cpp  surfprop_utils.cpp  surfprop_utils.h  taskid.h  timer.cpp  timer.h  trackprop.cpp  trackprop.h
ni_vision/src/ni_3rdparty/: CMakeLists.txt  package.xml
ni_vision/src/ni_3rdparty/include/terminal_tools/: time.h.org
ni_vision/src/ni_depth_segmentation/: CMakeLists.txt  package.xml
ni_vision/src/ni_depth_segmentation/cfg/: gen_params_NodeKVP.cfg
ni_vision/src/ni_depth_segmentation/launch/: attention.launch  depth_segmentation.launch  surface_segmentation_and_tracking_node.launch
ni_vision/src/ni_depth_segmentation/msg/: NodeKVP.msg
ni_vision/src/ni_depth_segmentation/src/: attention_and_recognition_node.cpp  attention_node.cpp  depth_map_node.cpp  depth_segmentation_node.cpp  nyu_depth_v2_node.cpp  surface_segmentation_and_tracking_node.cpp  surface_tracking_node.cpp
ni_vision/src/ni_lib/: package.xml
ni_vision/src/ni_lib/include/siftfast/: siftfast.h
ni_vision/src/ni_lib/src/siftfast/: siftfast.h.in
ni_vision/src/ni_lib/src/terminal_tools/: parse.cpp  print.cpp
ni_vision/src/ni_seg_track/: CMakeLists.txt  package.xml
ni_vision/src/ni_seg_track/src/: depth_map_node.cpp  depth_segmentation_node.cpp
ni_vision/src/ni_tools/: CMakeLists.txt  package.xml
ni_vision/src/ni_tools/src/: image_tool.cpp  libmake.cpp  libmake_color.cpp  libmake_func.cpp  libmake_simple.cpp  video_tool.cpp
ni_vision/src/ni_vision/: CMakeLists.txt  package.xml
ni_vision/src/ni_vision/include/: func_operation_.h
ni_vision/src/ni_vision/src/: func_RecPcl.cpp  func_RecPcl.hpp  func_etc.cpp  func_etc.hpp  func_header.cpp  func_header.hpp  func_init.cpp  func_init.hpp  func_operations.cpp  func_operations.hpp  func_preproc.cpp  func_preproc.hpp  func_recognition.cpp  func_recognition.hpp  func_recognition_flann.cpp  func_recognition_flann.hpp  func_segmentation.cpp  func_segmentation.hpp  func_segmentation_gb.cpp  func_segmentation_gb.hpp  ni_vision.cpp  surfprop.cpp  surfprop.h
ni_vision/src/ni_vision/src/gbsegmentation/: convolve.h  disjoint-set.cpp  disjoint-set.h  filter.h  imconv.h  pnmfile.h  segment-image.h
ni_vision/src/ni_vision/src/munkres/: matrix.cpp  munkres.cpp  munkres.h  munkres.hpp
ni_vision/src/triangulation/: CMakeLists.txt  package.xml
ni_vision/src/triangulation/src/: 3D_match.cpp  3D_match_reduced.cpp  3D_model.cpp  3D_model_optimize.cpp  pairwise_incremental_registration.cpp  triangulation.cpp
ros_overlays/perception_pcl_addons/pcl_visualization/include/pcl_visualization/: pcl_visualizer.h  point_cloud_handlers.h
ros_overlays/zzz_packages/libsiftfast/: Makefile~  manifest.xml~
ros_overlays/zzz_packages/libsiftfast/.svn/: all-wcprops  entries
ros_overlays/zzz_packages/libsiftfast/.svn/text-base/: libgomp.so.1.svn-base
ros_overlays/zzz_packages/libsiftfast/lib/: libsiftfast.so.1.3.0
ros_overlays/zzz_packages/libsiftfast/libsiftfast_svn/: INSTALL  README
ros_overlays/zzz_packages/libsiftfast/libsiftfast_svn/.svn/: all-wcprops  entries
ros_overlays/zzz_packages/libsiftfast/libsiftfast_svn/examples/: testsiftfast.py
ros_overlays/zzz_packages/pcl/: CMakeLists.txt
ros_overlays/zzz_packages/pcl/msg_gen/lisp/: ModelCoefficients.lisp  Vertices.lisp  (+8 more)
ros_overlays/zzz_packages/pcl/test/: CMakeLists.txt  test_feature.cpp  test_mls.cpp  test_surface.cpp
(+20 files in other folders)
